order/alignment correction

--- a/Hackfest_files/css_files/style.css
+++ b/Hackfest_files/css_files/style.css
@@ -91,7 +91,7 @@ body {
       top:28vh!important;
     }
     #main .container .left{
-      left: 38vw!important;
+      left: 33vw!important;
       top: 20vh!important;
     }
   }
